pkg/lang/testdata/ub/constraints/valid/check-constraints-splat-fields.ub
constraints: [
  { kind: exactly-one-of, fields: [input.replicas[*].inline, input.replicas[*].from-file] },
]
