pkg/lang/testdata/ub/constraints/invalid/bad-segments.ub
constraints: [
  { kind: required-together, fields: [input.code['k'], input.a] },
  { kind: required-together, fields: [input.replicas[*], input.a] },
  { kind: required-together, fields: [input.a[*].b[*].x, input.a] },
  { kind: required-together, fields: [input.code[i], input.a] },
  { kind: required-together, fields: [vpc-id, input.a] },
  { kind: required-together, fields: [code.inline, input.a] },
]
